--- a/writing/QuantUCB_orderstat/proof.tex
+++ b/writing/QuantUCB_orderstat/proof.tex
@@ -538,11 +538,11 @@ so
 
 $X_1, ..., X_n$ are independent random variables, distributed according to exponential distribution's CDF F, and $X_{(1)} \geq X_{(2)} \geq ... \geq X_{(n)}$ denote the corresponding order statistics. $X_{n/2}$ is the median (we assume n is even). For all $0 \leq \lambda<n /\left(2 \sqrt{v_{n}}\right)$, 
 \begin{align}
-    \log \mathbb{E}e^{\lambda\left(X_{(n / 2)}-\mathrm{E} X_{(n / 2)}\right)} \leq \frac{v_{n} \lambda^{2}}{2\left(1-2 \lambda \sqrt{v_{n} / n}\right)}.
+    \log \mathbb{E}e^{\lambda\left(X_{(n / 2)}-\mathrm{E} X_{(n / 2)}\right)} \leq ....
 \end{align}
 where the expectation is in terms of the randomness of the environment. For all $t > 0$,
 \begin{align}
-    \mathbb{P}\left\{X_{(n / 2)}-\mathbb{E} X_{(n / 2)}>\sqrt{2 v_{n} t}+2 t \sqrt{v_{n} / n}\right\} \leq e^{-t}
+    \mathbb{P}\left\{X_{(n / 2)}-\mathbb{E} X_{(n / 2)}>...\right\} \leq e^{-t}
 \end{align}
 \end{prop}
 
