--- a/writing/QuantUCB_orderstat/proof.tex
+++ b/writing/QuantUCB_orderstat/proof.tex
@@ -234,7 +234,7 @@ The policy includes two parts, where the first part is the empirical median of t
 B_i(t, T_i(t)) &= \sqrt{2v_t \varepsilon} + 2 \varepsilon \sqrt{v_t/T_i(t)}\\
 &= \sqrt{2 \times \frac{8}{T_i(t) \log 2} \times 4 \log t} + 2 \times 4 \log t \times \sqrt{\frac{8}{T_i(t) \log 2} \times \frac{1}{T_i(t)}}\\
 &= \sqrt{\frac{64 \log t}{T_i(t) \log 2}} + \sqrt{\frac{64 \log^2 t \times 8}{T_i^2(t) \log 2}}\\
-&= \frac{\sqrt{64 \log t T__i(t)} + \sqrt{64 \log^2 t \times 8}}{\sqrt{T_i^2(t) \log 2}}\\
+&= \frac{\sqrt{64 \log t T__i(t)} + 64 \log^2 t \times 8}{\sqrt{T_i^2(t) \log 2}}\\
 \label{B_i(i, T_i(t)) definition 2}
 &= \frac{8 \sqrt{\log t} (\sqrt{ T_i(t)} + \sqrt{8\log t})}{T_i(t)  \sqrt{\log 2}}
 \end{align}
@@ -353,13 +353,13 @@ To give a bound for $\mathbb{E}[T_i(n)]$, we only need to manage give a bound of
     & P(\hat{m}_{*, s} + B_*(t, s)  \leq \hat{m}_{i, s_i} + B_i(t, s_i)) \\
     \leq &  P(\hat{m}_{*, s} + B_*(t, s) \leq  \mathbb{E}[\hat{m}_{*, s}]) + P(\hat{m}_{i, s_i} - B_i(t, s_i) \geq \mathbb{E}[\hat{m}_{i, s_i}])
 \end{align}
-According to Lemma 1, we bound the probability of (\ref{lemma 1.1})(\ref{lemma 1.2}) as
+According to Lemma 1, we bound the probability of (\ref{lemma 7.1})(\ref{lemma 7.2}) as
     \begin{align}
         P(\hat{m}_{*, s} + B_*(t, s) \leq  \mathbb{E}[\hat{m}_{*, s}]) \leq  e^{-4\log t} = t^{-4}\\
         P(\hat{m}_{i, s_i} - B_i(t, s_i) \geq \mathbb{E}[\hat{m}_{i, s_i}])  \leq  e^{-4\log t} = t^{-4}
     \end{align}
     
-    Then our goal is to find the value of l to make (\ref{lemma 1.3}) false, i.e. 
+    Then our goal is to find the value of l to make (\ref{lemma 7.3}) false, i.e. 
     \begin{align}
     \label{goal to find l}
         B_i(t, s_i) \leq  \frac{1}{2}(\mathbb{E}[\hat{m}_{*, s}] - \mathbb{E}[\hat{m}_{i, s_i}])\\
@@ -464,11 +464,11 @@ By \cite{boucheron2012} Theorem 2.9,
 \begin{align}
     \log \operatorname{E} e^{\lambda\left(X_{(n / 2)}-\mathbb{E} X_{(n / 2)}\right)} \leq \frac{n}{4} \lambda \mathbb{E}\left[\Delta_{n / 2}\left(e^{\lambda \Delta_{n / 2}}-1\right)\right]
 \end{align}
-where $\Delta_{n / 2}=X_{(n / 2)}-X_{(n / 2+1)} \sim U\left(e^{E_{n / 2} /(n / 2)+Y_{(n / 2+1)}} \right)-U\left(e^{Y_{(n / 2+1)}}\right).$ where $E_{n/2}$ is standard exponentially distributed and independent of $Y_{(n/2 + 1)}$. $Y_{(1)} \geq Y_{(2)} \geq ... \geq Y_{(n)}$ is the order statistics of an independent sample of the standard exponential distribution. 
+where $\Delta_{n / 2}=X_{(n / 2)}-X_{(n / 2+1)} \sim \tilde{U}\left(e^{E_{n / 2} /(n / 2)+Y_{(n / 2+1)}} \right)- \tilde{U}\left(e^{Y_{(n / 2+1)}}\right).$ where $E_{n/2}$ is standard exponentially distributed and independent of $Y_{(n/2 + 1)}$. $Y_{(1)} \geq Y_{(2)} \geq ... \geq Y_{(n)}$ is the order statistics of an independent sample of the standard exponential distribution. 
 
 If hazard rate h is non-decreasing, then for all $t > 0$ and $x > 0$, $U(\exp (t+x))-U(\exp (t)) \leq x / h(U(\exp (t)))$. Thus, 
 \begin{align}
-    U\left(e^{E_{n / 2} /(n / 2)+Y_{(n / 2+1)}} \right)-U\left(e^{Y_{(n / 2+1)}}\right) \leq \frac{E_{n / 2} /(n / 2)}{h(U(\exp{(Y_{(n/2+1)})}))}
+    \tilde{U}\left(e^{E_{n / 2} /(n / 2)+Y_{(n / 2+1)}} \right)- \tilde{U}\left(e^{Y_{(n / 2+1)}}\right) \leq \frac{E_{n / 2} /(n / 2)}{h(\tilde{U}(\exp{(Y_{(n/2+1)})}))}
 \end{align}
 
 From \cite{boucheron2012} Proposition 4.1 (ii), 
@@ -478,13 +478,23 @@ From \cite{boucheron2012} Proposition 4.1 (ii),
 \end{align}
 so we get 
 \begin{align}
-    U\left(e^{E_{n / 2} /(n / 2)+Y_{(n / 2+1)}} \right)-U\left(e^{Y_{(n / 2+1)}}\right) &\leq \frac{E_{n / 2} /(n / 2)}{\sqrt{k_1 (Y_{(n/2+1)} + \log 2)}}\\
+    \triangle_{n/2} = \tilde{U}\left(e^{E_{n / 2} /(n / 2)+Y_{(n / 2+1)}} \right)-\tilde{U}\left(e^{Y_{(n / 2+1)}}\right) 
+    &\leq \frac{E_{n / 2} /(n / 2)}{\sqrt{k_1 (Y_{(n/2+1)} + \log 2)}}\\
     &\leq \frac{ \sqrt{2} E_{n / 2} }{(n / 2)\sqrt{(Y_{(n/2+1)} + \log 2)}}\\
     &\leq \frac{ \sqrt{2} E_{n / 2} }{(n / 2)\sqrt{ \log 2}}\\
     &= \sqrt{\frac{v_{n}}{n}} E_{n / 2}
 \end{align}
 
-(still haven't figure out how to take integral with the last line)
+Then our goal is to show that $\frac{n}{4} \lambda \mathbb{E}\left[\Delta_{n / 2}\left(e^{\lambda \Delta_{n / 2}}-1\right)\right] \leq \frac{v_{n} \lambda^{2}}{2\left(1-2 \lambda \sqrt{v_{n} / n}\right)}$, which can be shown in the following,
+
+\begin{align}
+    & \lambda \mathbb{E}[\left(\tilde{U}\left(e^{E_{n / 2} /(n / 2)+Y_{(n / 2+1)}} \right)-\tilde{U}\left(e^{Y_{(n / 2+1)}}\right) \right) \left(e^{\lambda \left (\tilde{U}\left(e^{E_{n / 2} /(n / 2)+Y_{(n / 2+1)}} \right)-\tilde{U}\left(e^{Y_{(n / 2+1)}}\right) \right)} - 1\right)]\\
+    & \leq \lambda \mathbb{E}[\sqrt{\frac{v_{n}}{n}} E_{n / 2} \left(e^{\lambda \sqrt{\frac{v_{n}}{n}} E_{n / 2}} -1\right)]\\
+    & = \int_0^\infty \lambda  \sqrt{\frac{v_{n}}{n}} \{ E_{n / 2}  = x \} \left(e^{\lambda \sqrt{\frac{v_{n}}{n}} \{E_{n / 2} = x\}} -1\right) f_{E_{n/2}}(x) d x\\
+    & = \int_0^\infty \lambda  \sqrt{\frac{v_{n}}{n}} x \left(e^{\lambda \sqrt{\frac{v_{n}}{n}} x } -1\right) e^{-x} d x\\
+    & \leq \frac{2\lambda^2 v_n}{n (1 - 2 \lambda \sqrt{\frac{v_n}{n}})}
+\end{align}
+where the last step is because for $0 \leq \mu \leq 1/2$, $\int_{0}^{\infty} \mu x\left(e^{\mu x}-1\right) e^{-x} \mathrm{d} x=\frac{\mu^{2}(2-\mu)}{(1-\mu)^{2}} \leq \frac{2 \mu^{2}}{1-2 \mu}$.
 \end{proof}
 
 The above proof shows that the key point of change the absolute value of Gaussian random variable with other random variables is we can have some bound (positive) for the hazard rate (in terms of the U transformation). 
@@ -510,6 +520,7 @@ hazard rate of exponential distribution:
 \begin{align}
  h = f(x, \alpha)/ (1-F(x, \alpha)) = \alpha
 \end{align}
+
 
 \begin{prop}
 \label{prop for expon hazard rate}
@@ -538,11 +549,11 @@ so
 
 $X_1, ..., X_n$ are independent random variables, distributed according to exponential distribution's CDF F, and $X_{(1)} \geq X_{(2)} \geq ... \geq X_{(n)}$ denote the corresponding order statistics. $X_{n/2}$ is the median (we assume n is even). For all $0 \leq \lambda<n /\left(2 \sqrt{v_{n}}\right)$, 
 \begin{align}
-    \log \mathbb{E}e^{\lambda\left(X_{(n / 2)}-\mathrm{E} X_{(n / 2)}\right)} \leq ....
+    \log \mathbb{E}e^{\lambda\left(X_{(n / 2)}-\mathrm{E} X_{(n / 2)}\right)} \leq \frac{v_{n} \lambda^{2}}{2\left(1-2 \lambda \sqrt{v_{n} / n}\right)}
 \end{align}
 where the expectation is in terms of the randomness of the environment. For all $t > 0$,
 \begin{align}
-    \mathbb{P}\left\{X_{(n / 2)}-\mathbb{E} X_{(n / 2)}>...\right\} \leq e^{-t}
+    \mathbb{P}\left\{X_{(n / 2)}-\mathbb{E} X_{(n / 2)}>\sqrt{2 v_{n} t}+2 t \sqrt{v_{n} / n}\right\}  \leq e^{-t}
 \end{align}
 \end{prop}
 
@@ -564,14 +575,104 @@ From Proposition \ref{prop for expon hazard rate},
 \end{align}
 so we get 
 \begin{align}
-    U\left(e^{E_{n / 2} /(n / 2)+Y_{(n / 2+1)}} \right)-U\left(e^{Y_{(n / 2+1)}}\right) 
+    \triangle_{n/2} = U\left(e^{E_{n / 2} /(n / 2)+Y_{(n / 2+1)}} \right)-U\left(e^{Y_{(n / 2+1)}}\right) 
     &\leq \frac{E_{n / 2} /(n / 2)}{\frac{Y_{(n/2+1)}}{\alpha} }\\
-    &\leq \frac{ 2\alpha E_{n / 2} }{n Y_{(n/2+1)}}
+    &\leq \frac{ 2\alpha E_{n / 2} }{n Y_{(n/2+1)}}\\
+    & \leq \frac{ 2\alpha E_{n / 2} }{n \gamma}
 \end{align}
+where the last line holds with the assumption $Y_{(n/2+1)} \geq \gamma$, $\gamma > 0$ is a constant. Let $v_n = \frac{4 \alpha^2}{n \gamma^2}$, we have $\triangle_{n/2} \leq \sqrt{\frac{v_n}{n}} E_{n/2}$ (TODO: release the assumption)\\
 
-need to make assumption for $Y_{(n/2+1)}$?
+Then our goal is to show that $\frac{n}{4} \lambda \mathbb{E}\left[\Delta_{n / 2}\left(e^{\lambda \Delta_{n / 2}}-1\right)\right] \leq \frac{v_{n} \lambda^{2}}{2\left(1-2 \lambda \sqrt{v_{n} / n}\right)}$, which can be shown in the following (same as the Gaussian case),
+
+\begin{align}
+    & \lambda \mathbb{E}[\left(U\left(e^{E_{n / 2} /(n / 2)+Y_{(n / 2+1)}} \right)-U\left(e^{Y_{(n / 2+1)}}\right) \right) \left(e^{\lambda \left (U\left(e^{E_{n / 2} /(n / 2)+Y_{(n / 2+1)}} \right)-U\left(e^{Y_{(n / 2+1)}}\right) \right)} - 1\right)]\\
+    & \leq \lambda \mathbb{E}[\sqrt{\frac{v_{n}}{n}} E_{n / 2} \left(e^{\lambda \sqrt{\frac{v_{n}}{n}} E_{n / 2}} -1\right)]\\
+    & = \int_0^\infty \lambda  \sqrt{\frac{v_{n}}{n}} \{ E_{n / 2}  = x \} \left(e^{\lambda \sqrt{\frac{v_{n}}{n}} \{E_{n / 2} = x\}} -1\right) f_{E_{n/2}}(x) d x\\
+    & = \int_0^\infty \lambda  \sqrt{\frac{v_{n}}{n}} x \left(e^{\lambda \sqrt{\frac{v_{n}}{n}} x } -1\right) e^{-x} d x\\
+    & \leq \frac{2\lambda^2 v_n}{n (1 - 2 \lambda \sqrt{\frac{v_n}{n}})}
+\end{align}
+where the last step is because for $0 \leq \mu \leq 1/2$, $\int_{0}^{\infty} \mu x\left(e^{\mu x}-1\right) e^{-x} \mathrm{d} x=\frac{\mu^{2}(2-\mu)}{(1-\mu)^{2}} \leq \frac{2 \mu^{2}}{1-2 \mu}$.
+
 \end{proof}
 
+%------------------------------------------------------------------------------
+\textbf{Proposed policy for exponential distribution (with assumption $Y_{(n/2 + 1)} \geq \gamma)$}\\
+
+In the (t+1) round, pick an arm with index 
+\begin{align}
+\label{policy normal}
+   \argmax_{i \in \mathcal{K}} \hat{m}_{i, T_i(t)} + \sqrt{2v_t \varepsilon} + 2 \varepsilon \sqrt{v_t/T_i(t)}
+\end{align}
+where $\hat{m}_{i, T_i(t)}$ is the empirical median for arm i at the round t, $\varepsilon = 4 \log t$, $v_t = \frac{4 \alpha^2}{T_i(t) \gamma^2}$ with $0 < \gamma \leq 1$. $T_i(t)$ is the number of times arm i has been played until round t.  
+
+The policy includes two parts, where the first part is the empirical median of the rewards, the second part is the confidence bound and we denote it as,
+
+\begin{align}
+\label{B_i(i, T_i(t)) definition}
+B_i(t, T_i(t)) &= \sqrt{2v_t \varepsilon} + 2 \varepsilon \sqrt{v_t/T_i(t)}\\
+&= \sqrt{2 \times \frac{4 \alpha^2}{T_i(t) \gamma^2} \times 4 \log t} + 2 \times 4 \log t \times \sqrt{\frac{4 \alpha^2}{T_i(t) \gamma^2} \times \frac{1}{T_i(t)}}\\
+&= \frac{4 \alpha \sqrt{\log t} ( \sqrt{ 2T_i(t)} + 4\sqrt{\log t})}{T_i(t) \gamma}
+\end{align}
+
+Thus, the policy in (\ref{policy normal}) can be written as,
+\begin{align}
+    \argmax_{i \in \mathcal{K}} \hat{m}_{i, T_i(t)} +  \frac{4 \alpha \sqrt{\log t} ( \sqrt{ 2T_i(t)} + 4\sqrt{\log t})}{T_i(t) \gamma}
+\end{align}
+
+\begin{theo}
+(Regret bound for policy of exponential distribution) (with assumption $Y_{(n/2 + 1)} \geq \gamma)$. \\
+
+For all K $>$ 1, if the proposed policy is run on K machines with absolute reward distribution $v = (P_i: i \in \mathcal{K})$ having non-decreasing hazard rate, then its expected regret after any number of n plays is at most 
+
+\begin{align}
+    \sum_{i: m_i < m_\ast} \frac{32 \alpha \log t (\sqrt{2 \alpha + \triangle_{i, 1/2} \gamma^2} + \sqrt{\alpha})^2}{ \triangle_{i, 1/2} \gamma^2} + (1 + \frac{\pi^2}{3}) (\sum_{j=1}^K \triangle_{j, 1/2}) 
+\end{align}
+where $m_i$ is the median of $P_i$, $m_\ast$ is the median of the best arm (i.e. the arm with maximum median). $\triangle_{j, 1/2} = m_\ast - m_j$. $\alpha > 0$ is the parameter of exponential distribution. 
+\end{theo}
+
+The bound isn't ideal, since when $\gamma$ approaches to 0, the bound approaches to $\infty$, which means we have to release the assumption of Y. 
+%-------------------------------------------------------------------------------
+
+\section*{Appendix}
+
+\textbf{Logic of Proposition 4.5}\\
+
+Known
+\begin{align}
+    t \leq  \frac{\lambda}{2} \mathbb{E}_{X, Y}[g(X, Y)]
+\end{align}
+
+and define
+\begin{align}
+    \mathbb{E}_X[g(X, Y = y)| Y = y] \leq \varphi (y)\\
+    \rho = \max_{\eta} \mathbb{E}_X[g(X, Y = \eta)|Y = \eta]
+\end{align}
+
+The conditional expectation $\mathbb{E}_X[g(X, Y)| Y]$ is a non-decreasing function of Y.\\
+
+The goal is to prove the target t satisfies the inequality:\\
+\begin{align}
+    t \leq \lambda \varphi(\tau) + \frac{\lambda}{2} \rho \mathbb{P}(Y \leq \tau)
+\end{align}
+Proof:
+\begin{align}
+    t & \leq  \frac{\lambda}{2} \mathbb{E}_{X, Y}[g(X, Y)]\\
+    & = \frac{\lambda}{2}\int _0^{\infty} \int_0^{\infty} p(X = x, Y = y) g(X = x, Y = y) dxdy\\
+    & = \frac{\lambda}{2}\int _0^{\infty} \int_0^{\infty} p(X = x|Y = y) p(Y = y)g(X = x, Y = y) dxdy\\
+    & = \frac{\lambda}{2}\int _0^{\infty} p(Y = y) \int_0^{\infty} p(X = x|Y = y) g(X = x, Y = y) dxdy\\
+    & = \frac{\lambda}{2}\int _0^{\infty} p(Y = y) \mathbb{E}_X[g(X, Y = y)| Y = y]dy\\
+    & = \frac{\lambda}{2}\left(\int _0^{\tau} p(Y = y) \mathbb{E}_X[g(X, Y = y)| Y = y]dy + \int _\tau^{\infty} p(Y = y) \mathbb{E}_X[g(X, Y = y)| Y = y]dy\right)\\
+    & \leq \frac{\lambda}{2}\left(\int _0^{\tau} p(Y = y) dy \times \mathbb{E}_X[g(X, Y = 0)| Y = 0] + \int _\tau^{\infty} p(Y = y) dy \times \mathbb{E}_X[g(X, Y = \tau)| Y = \tau] \right)\\
+    & = \frac{\lambda}{2}\left(p(Y \leq \tau) \times \mathbb{E}_X[g(X, Y = 0)| Y = 0] + p(Y > \tau) \times \mathbb{E}_X[g(X, Y = \tau)| Y = \tau] \right)\\
+    & \leq \frac{\lambda}{2} \mathbb{E}_X[g(X, Y = \tau)|Y = \tau] + \frac{\lambda}{2} \mathbb{P}(Y \leq \tau) \max_{\eta} \mathbb{E}_X[g(X, Y = \eta)|Y = \eta]\\
+    & \leq \lambda \varphi(\tau) + \frac{\lambda}{2} \rho \mathbb{P}(Y \leq \tau)
+\end{align}
+
+From (122) to (123), we 
+
+Note the corresponding relationships to the paper are:\\
+
+$t = \log \mathbb{E} [e^{\lambda (X_{(1)} - \mathbb{E}[X_{(1)}])}]$, $X = E_1, Y = Y_{(2)}$ are both standard exponential random variables. 
 
 \printbibliography
 \end{document}
