finish normal+exp

--- a/writing/QuantUCB_orderstat/ref.bib
+++ b/writing/QuantUCB_orderstat/ref.bib
@@ -12,3 +12,10 @@ volume = "17",
 year = "2012"
 }
 
+@article{boucheron2013,
+author = {Boucheron, Stéphane and Lugosi, Gábor and Massart, Pascal},
+year = {2013},
+month = {01},
+pages = {},
+title = {Concentration Inequalities: A nonasymptotic theory of independence}
+}
