--- a/writing/QuantUCB_orderstat/proof.tex
+++ b/writing/QuantUCB_orderstat/proof.tex
@@ -142,22 +142,53 @@ Thus let $\tilde{U} : [ 1, \infty ) \rightarrow[0, \infty)$ be defined by $\wide
 However, if we consider the Gaussian distribution with non-zero mean, we cannot get rid of the term $\text{erf}(\frac{x + \mu}{\sigma \sqrt{2}})$ easily, which means it's hard to represent the quantile of the absolute non-standard Gaussian with $\Phi$, and thus cannot direct make use of the fact of $p \sqrt{\kappa_{1} \log 1 / p} \leq \phi \circ \Phi^{-1}(p)$.
 
 
+\begin{lemma}
+\label{lemma mills' ratio}
+    For $x >0$, $ \sigma^2 \phi(x) -x \bar{\Phi}(x) \geq 0$, where $\bar{\Phi}(x) = 1 - \Phi(x),  \phi, \Phi$ are respectively pdf and cdf for centered Gaussian distribution with variance $\sigma^2$.
+\end{lemma}
+\begin{proof}
+\begin{align}
+    0 &< \int_x^\infty \bar{\Phi}(t) dt\\
+    & = t \overline{\Phi}\left.(t)\right|_{x} ^{\infty}-\int_x^{\infty} t(-\phi(t)) d t\\
+    &= -x \overline{\Phi}(x)+ \sigma^2 \phi(x).
+\end{align}
+\end{proof}
+
+\begin{lemma}
+    $\phi \circ \Phi^{-1}(p) \geq \frac{p}{\sigma} \sqrt{\kappa_1 \log 1/p}$,  where $\kappa_{1} \geq 1 / 2, \phi, \Phi$ are respectively pdf and cdf for centered Gaussian distribution with variance $\sigma^2$.
+\end{lemma}
+\begin{proof}
+Let's look the special case when $\sigma = 1$, which is proved in \cite{boucheron2012}. The fact that $\phi \circ \Phi^{-1}(p) \geq p \sqrt{\kappa_1 \log 1/p}$ follows from $\phi(x) - x \bar{\Phi(x)} \geq 0$. We can derive $\Phi^{-1}(p) \geq \sigma p/(1-p) \sqrt{\kappa_1 \log 1/p}$ for any $\sigma$. \\
+
+From Lemma \ref{lemma mills' ratio}, we know $ \phi(x) \geq \frac{1}{\sigma^2}x \bar{\Phi}(x)$
+\begin{align}
+    \phi \circ \Phi^{-1}(p) \geq \frac{1}{\sigma^2} \Phi^{-1}(p) (1-p) \geq \frac{p}{\sigma} \sqrt{\kappa_1 \log 1/p}
+\end{align}
+\end{proof}
+
 
 \begin{prop}
 \label{prop: hazard bound for normal}
-Absolute values of Gaussian random variables with zero mean have a non-decreasing
+Absolute values of centered Gaussian random variables have a non-decreasing
 hazard rate, for $y>0$,
 \begin{align}
-    \phi(\tilde{U}(\exp (y))) / \overline{\Phi}(\tilde{U}(\exp (y))) \geq \sqrt{\kappa_{1}(y+\log 2)}
+    \phi(\tilde{U}(\exp (y))) / \overline{\Phi}(\tilde{U}(\exp (y))) \geq \sigma \sqrt{\kappa_{1}(y+\log 2)}
 \end{align}
- where $\kappa_{1} \geq 1 / 2$. (\textcolor{red}{TODO}: figure out how to prove it and prove it still holds for $\sigma \neq 1$ )
-
+ where $\kappa_{1} \geq 1 / 2, \phi, \Phi$ are respectively pdf and cdf for centered Gaussian distribution with variance $\sigma^2$. 
 \end{prop}
+
+\begin{proof}
+\begin{align}
+    \frac{\phi\left(\Phi^{-1}\left(1-e^{-y} / 2\right)\right)}{\overline{\Phi}\left(\Phi^{-1}\left(1-e^{-y} / 2\right)\right)}=\frac{\phi\left(\Phi^{-1}\left(e^{-y / 2}\right)\right)}{e^{-y} / 2} \geq \sigma \sqrt{\kappa_{1}(\log 2+y)}
+\end{align}
+\end{proof}
+
 
 \begin{prop}
 \label{prop 4.6}
-Let $v_{n}=8 /(n \log 2)$. $X_1, ..., X_n$ are independent random variables, distributed according to absolute value of Gaussian distribution with zero mean, and $X_{(1)} \geq X_{(2)} \geq ... \geq X_{(n)}$ denote the corresponding order statistics. $X_{n/2}$ is the median (we assume n is even). For all $0 \leq \lambda<n /\left(2 \sqrt{v_{n}}\right)$, 
+Let $v_{n}=8 /(n \sigma^2 \log 2)$. $X_1, ..., X_n$ are independent random variables, distributed according to absolute value of Gaussian distribution with zero mean, and $X_{(1)} \geq X_{(2)} \geq ... \geq X_{(n)}$ denote the corresponding order statistics. $X_{n/2}$ is the median (we assume n is even). For all $0 \leq \lambda<n /\left(2 \sqrt{v_{n}}\right)$, 
 \begin{align}
+    \label{inequality Bernstein with log for normal}
     \log \mathbb{E}e^{\lambda\left(X_{(n / 2)}-\mathbb{E} X_{(n / 2)}\right)} \leq \frac{v_{n} \lambda^{2}}{2\left(1-2 \lambda \sqrt{v_{n} / n}\right)}.
 \end{align}
 where the expectation is in terms of the randomness of the environment. For all $\varepsilon > 0$,
@@ -184,17 +215,17 @@ From Proposition \ref{prop non-increasing hazard rate} we know, if hazard rate h
 From Proposition \ref{prop: hazard bound for normal}, 
 \begin{align}
     h(U(\exp{(Y_{(n/2+1)})})) &= \frac{\phi(\widetilde{U}(\exp (Y_{(n/2+1)})))}{\overline{\Phi}(\widetilde{U}(\exp (Y_{(n/2+1)})))}\\
-    &\geq \sqrt{k_1 (Y_{(n/2+1)} + \log 2)} \quad \text{where} \quad k_1 \geq 1/2,
+    &\geq \sigma \sqrt{k_1 (Y_{(n/2+1)} + \log 2)} \quad \text{where} \quad k_1 \geq 1/2,
 \end{align}
 so we get 
 \begin{align}
     \triangle_{n/2} = \tilde{U}\left(e^{E_{n / 2} /(n / 2)+Y_{(n / 2+1)}} \right)-\tilde{U}\left(e^{Y_{(n / 2+1)}}\right) 
-    &\leq \frac{E_{n / 2} /(n / 2)}{\sqrt{k_1 (Y_{(n/2+1)} + \log 2)}}\\
-    &\leq \frac{ \sqrt{2} E_{n / 2} }{(n / 2)\sqrt{(Y_{(n/2+1)} + \log 2)}}\\
-    &\leq \frac{ \sqrt{2} E_{n / 2} }{(n / 2)\sqrt{ \log 2}}\\
-    &= \sqrt{\frac{v_{n}}{n}} E_{n / 2}
+    &\leq \frac{E_{n / 2} /(n / 2)}{\sigma \sqrt{k_1 (Y_{(n/2+1)} + \log 2)}}\\
+    &\leq \frac{ \sqrt{2} E_{n / 2} }{(n\sigma / 2)\sqrt{(Y_{(n/2+1)} + \log 2)}}\\
+    &\leq \frac{ \sqrt{2} E_{n / 2} }{(n \sigma / 2)\sqrt{ \log 2}}\\
+    &= \sqrt{\frac{v_{n}}{n}} E_{n / 2},
 \end{align}
-
+where $v_{n}=8 /(n \sigma^2 \log 2)$.
 Then our goal is to show that $\frac{n}{4} \lambda \mathbb{E}\left[\Delta_{n / 2}\left(e^{\lambda \Delta_{n / 2}}-1\right)\right] \leq \frac{v_{n} \lambda^{2}}{2\left(1-2 \lambda \sqrt{v_{n} / n}\right)}$, which can be shown in the following,
 
 \begin{align}
@@ -206,7 +237,10 @@ Then our goal is to show that $\frac{n}{4} \lambda \mathbb{E}\left[\Delta_{n / 2
 \end{align}
 where the last step is because for $0 \leq \mu \leq 1/2$, $\int_{0}^{\infty} \mu x\left(e^{\mu x}-1\right) e^{-x} \mathrm{d} x=\frac{\mu^{2}(2-\mu)}{(1-\mu)^{2}} \leq \frac{2 \mu^{2}}{1-2 \mu}$.\\
 
-\textcolor{red}{TODO}: prove (\ref{inequality Bernstein upper bound for normal}).\\
+(\ref{inequality Bernstein with log for normal}) is thus proved. Such a random variable satisfies a so-called Bernstien inequality \cite{boucheron2013}, for $\varepsilon > 0$, 
+\begin{align}
+    \mathbb{P}\left\{X_{(n / 2)}-\mathbb{E} X_{(n / 2)}>\sqrt{2 v_{n} \varepsilon}+2 \varepsilon \sqrt{v_{n} / n}\right\} \leq e^{-\varepsilon}
+\end{align}
 
 If the $X_{n/2} \in \mathbb{R}$, the lower tail (\ref{inequality Bernstein lower bound for normal}) holds because of the symmetry (central limit theory). If the $X_{n/2} \in \mathbb{R^+}$ is positive, then we still have 
 \begin{align}
@@ -214,7 +248,7 @@ If the $X_{n/2} \in \mathbb{R}$, the lower tail (\ref{inequality Bernstein lower
 \end{align}
 In this case, the bound for the lower tail is loose.\\ 
 
-\textcolor{red}{TODO}:discuss whether the above proof is correct. 
+%\textcolor{red}{TODO}: discuss whether the above proof is correct. 
 \end{proof}
 
 
@@ -300,9 +334,9 @@ so we get
     d_{n/2} = U\left(e^{E_{n / 2} /(n / 2)+Y_{(n / 2+1)}} \right)-U\left(e^{Y_{(n / 2+1)}}\right) 
     &\leq \frac{E_{n / 2} /(n / 2)}{\frac{Y_{(n/2+1)}}{\theta} }\\
     &\leq \frac{ 2\theta E_{n / 2} }{n Y_{(n/2+1)}}\\
-    & \leq \frac{ 2\theta E_{n / 2} }{n \gamma}
+    & \approx \frac{ 2\theta E_{n / 2} }{ n\log 2 }
 \end{align}
-where the last line holds with the assumption $Y_{(n/2+1)} \geq \gamma$, $\gamma > 0$ is a constant. Let $v_n = \frac{4 \theta^2}{n \gamma^2}$, we have $d_{n/2} \leq \sqrt{\frac{v_n}{n}} E_{n/2}$ (\textcolor{red}{TODO}: release the assumption, start from prove Theo 2.9)\\
+where the last line holds with the assumption $Y_{(n/2+1)} \approx Y_{(n/2)} \approx \log2$. Let $v_n = \frac{4 \theta^2}{n (\log 2)^2}$, we have $d_{n/2} \leq \sqrt{\frac{v_n}{n}} E_{n/2}$. 
 
 Then our goal is to show that $\frac{n}{4} \lambda \mathbb{E}\left[d_{n / 2}\left(e^{\lambda d_{n / 2}}-1\right)\right] \leq \frac{v_{n} \lambda^{2}}{2\left(1-2 \lambda \sqrt{v_{n} / n}\right)}$, which can be shown in the following (same as the Gaussian case),
 
@@ -326,29 +360,29 @@ where the last step is because for $0 \leq \mu \leq 1/2$, $\int_{0}^{\infty} \mu
 
 \subsection{Absolute Value for Gaussian Distribution}
 
-\textbf{Proposed policy for absolute value of Gaussian distribution}\\
+\textbf{Proposed policy for absolute value of centered Gaussian distribution with variance $\sigma^2$}\\
 In the (t+1) round, pick an arm with index 
 \begin{align}
     \label{policy normal}
    \argmax_{i \in \mathcal{K}} \hat{m}_{i, T_i(t)} + \sqrt{2v_t \varepsilon} + 2 \varepsilon \sqrt{v_t/T_i(t)}
 \end{align}
-where $\hat{m}_{i, T_i(t)}$ is the empirical median for arm i at the round t, $\varepsilon = 4 \log t$, $v_t = \frac{8}{T_i(t) log2}$. $T_i(t)$ is the number of times arm i has been played until round t.  
+where $\hat{m}_{i, T_i(t)}$ is the empirical median for arm i at the round t, $\varepsilon = 4 \log t$, $v_t = \frac{8}{T_i(t) \sigma^2 log2}$. $T_i(t)$ is the number of times arm i has been played until round t.  
 
 The policy includes two parts, where the first part is the empirical median of the rewards, the second part is the confidence bound and we denote it as,
 
 \begin{align}
 \label{B_i(i, T_i(t)) definition}
 B_i(t, T_i(t)) &= \sqrt{2v_t \varepsilon} + 2 \varepsilon \sqrt{v_t/T_i(t)}\\
-&= \sqrt{2 \times \frac{8}{T_i(t) \log 2} \times 4 \log t} + 2 \times 4 \log t \times \sqrt{\frac{8}{T_i(t) \log 2} \times \frac{1}{T_i(t)}}\\
-&= \sqrt{\frac{64 \log t}{T_i(t) \log 2}} + \sqrt{\frac{64 \log^2 t \times 8}{T_i^2(t) \log 2}}\\
-&= \frac{\sqrt{64 \log t T__i(t)} + 64 \log^2 t \times 8}{\sqrt{T_i^2(t) \log 2}}\\
+&= \sqrt{2 \times \frac{8}{T_i(t) \sigma^2 \log 2} \times 4 \log t} + 2 \times 4 \log t \times \sqrt{\frac{8}{T_i(t) \sigma^2 \log 2} \times \frac{1}{T_i(t)}}\\
+&= \sqrt{\frac{64 \log t}{T_i(t) \sigma^2 \log 2}} + \sqrt{\frac{64 \log^2 t \times 8}{T_i^2(t)\sigma^2 \log 2}}\\
+&= \frac{\sqrt{64 \log t T__i(t)} + 64 \log^2 t \times 8}{\sqrt{T_i^2(t) \sigma^2 \log 2}}\\
 \label{B_i(i, T_i(t)) definition 2}
-&= \frac{8 \sqrt{\log t} (\sqrt{ T_i(t)} + \sqrt{8\log t})}{T_i(t)  \sqrt{\log 2}}
+&= \frac{8 \sqrt{\log t} (\sqrt{ T_i(t)} + \sqrt{8\log t})}{\sigma T_i(t)  \sqrt{\log 2}}
 \end{align}
 
 Thus, the policy in (\ref{policy normal}) can be written as,
 \begin{align}
-    \argmax_{i \in \mathcal{K}} \hat{m}_{i, T_i(t)} + \frac{8 \sqrt{\log t} (\sqrt{ T_i(t)} + \sqrt{8\log t})}{T_i(t)  \sqrt{\log 2}}
+    \argmax_{i \in \mathcal{K}} \hat{m}_{i, T_i(t)} + \frac{8 \sqrt{\log t} (\sqrt{ T_i(t)} + \sqrt{8\log t})}{\sigma T_i(t)  \sqrt{\log 2}}
 \end{align}
 
 \begin{theo}
@@ -452,31 +486,31 @@ According to Lemma 1, we bound the probability of (\ref{lemma 3.1})(\ref{lemma 3
     \end{align}
     Remind that $\triangle_{i, 1/2} = m_* - m_i = \mathbb{E}[\hat{m}_{*, s}] - \mathbb{E}[\hat{m}_{i, s_i}]$, then (\ref{goal to find l}) can be written as $B_i(t, s_i) \leq  \frac{1}{2} \triangle_{i, 1/2}$. According to (\ref{B_i(i, T_i(t)) definition 2}) and with $t \leq n, s_i \geq l \geq 1$, 
     \begin{align}
-        B_i(t, s_i) &= \frac{8 \sqrt{\log t} (\sqrt{ s_i} + \sqrt{8\log t})}{s_i  \sqrt{\log 2}}\\
-        & \leq \frac{8 \sqrt{\log n}}{\sqrt{\log 2}} \times \frac{\sqrt{s_i} + \sqrt{8\log n}}{s_i}\\
-        & \leq \frac{8 \sqrt{\log n}}{\sqrt{\log 2}} \times \frac{s_i + \sqrt{8\log n}}{s_i}
+        B_i(t, s_i) &= \frac{8 \sqrt{\log t} (\sqrt{ s_i} + \sqrt{8\log t})}{\sigma s_i  \sqrt{\log 2}}\\
+        & \leq \frac{8 \sqrt{\log n}}{ \sigma \sqrt{\log 2}} \times \frac{\sqrt{s_i} + \sqrt{8\log n}}{s_i}\\
+        & \leq \frac{8 \sqrt{\log n}}{\sigma \sqrt{\log 2}} \times \frac{s_i + \sqrt{8\log n}}{s_i}
     \end{align}
-    By solving $\frac{8 \sqrt{\log n}}{\sqrt{\log 2}} \times \frac{s_i + \sqrt{8\log n}}{s_i} \leq \frac{1}{2} \triangle_{i, 1/2}$, when $\triangle_{i, 1/2} \sqrt{\log 2} \geq 16 \sqrt{\log n}$ , 
+    By solving $\frac{8 \sqrt{\log n}}{\sigma \sqrt{\log 2}} \times \frac{s_i + \sqrt{8\log n}}{s_i} \leq \frac{1}{2} \triangle_{i, 1/2}$, when $\sigma \triangle_{i, 1/2} \sqrt{\log 2} \geq 16 \sqrt{\log n}$ , 
     
     \begin{align}
-        s_i \geq \frac{32 \sqrt{2} \log n}{\sqrt{\log 2} \triangle_{i, 1/2} - 16 \sqrt{\log n}} 
+        s_i \geq \frac{32 \sqrt{2} \log n}{\sigma \sqrt{\log 2} \triangle_{i, 1/2} - 16 \sqrt{\log n}} 
     \end{align}
     
-    However this assumption doesn't hold in most of the cases, so we need to solve the inequality by directly solving $\frac{8 \sqrt{\log n}}{\sqrt{\log 2}} \times \frac{\sqrt{s_i} + \sqrt{8\log n}}{s_i} \leq 1/2 \triangle_{i, 1/2}$, let $\beta = (64 + 32 \sqrt{2 \log 2} \triangle_{i,1/2} )\log n$,
+    However this assumption doesn't hold in most of the cases, so we need to solve the inequality by directly solving $\frac{8 \sqrt{\log n}}{\sigma \sqrt{\log 2}} \times \frac{\sqrt{s_i} + \sqrt{8\log n}}{s_i} \leq 1/2 \triangle_{i, 1/2}$, let $\beta = (64 + 32 \sqrt{2 \log 2}\sigma \triangle_{i,1/2} )\log n$,
     \begin{align}
-        s_i \geq \frac{(\sqrt{\beta} + 8 \sqrt{\log n})^2}{\log 2 \times \triangle_{i, 1/2}^2} 
+        s_i \geq \frac{(\sqrt{\beta} + 8 \sqrt{\log n})^2}{\sigma^2 \log 2 \times \triangle_{i, 1/2}^2} 
     \end{align}
     
     Then we have $l'$ which makes (\ref{lemma 3.3}) false,
    \begin{align}
-       l' = \lceil \frac{(\sqrt{\beta} + 8 \sqrt{\log n})^2}{\log 2 \times \triangle_{i, 1/2}^2} \rceil = \lceil \frac{(128 + 32 \sqrt{2 \log 2} \triangle_{i, 1/2} + 64 \sqrt{4 + 2 \sqrt{2 \log 2} \triangle_{i, 1/2}}) \log n}{\log 2 \triangle_{i, 1/2}^2} \rceil
+       l' = \lceil \frac{(\sqrt{\beta} + 8 \sqrt{\log n})^2}{\sigma^2 \log 2 \times \triangle_{i, 1/2}^2} \rceil = \lceil \frac{(128 + 32 \sqrt{2 \log 2} \sigma \triangle_{i, 1/2} + 64 \sqrt{4 + 2 \sqrt{2 \log 2}\sigma \triangle_{i, 1/2}}) \log n}{\log 2 \triangle_{i, 1/2}^2} \rceil
    \end{align} 
    
     So we get the bound of $\mathbb{E}[T_i(n)]$ as,
     \begin{align}
         \mathbb{E}[T_i(n)] &\leq l' + \sum_{t = 1}^\infty \sum_{s = 1}^{t-1} \sum_{s_i = l'}^{t-1} P(\hat{m}_{*, s} + B_*(t, s) \leq  \mathbb{E}[\hat{m}_{*, s}]) + P(\hat{m}_{i, s_i} - B_i(t, s_i) \geq \mathbb{E}[\hat{m}_{i, s_i}])\\
         & \leq l' + \sum_{t = 1}^\infty \sum_{s = 1}^{t-1} \sum_{s_i = 1}^{t-1} 2 t^{-4}\\
-        & \leq \frac{(\sqrt{\beta} + 8 \sqrt{\log n})^2}{\log 2 \times \triangle_{i, 1/2}^2} + 1 + \frac{\pi^2}{3}
+        & \leq \frac{(\sqrt{\beta} + 8 \sqrt{\log n})^2}{\sigma^2 \log 2 \times \triangle_{i, 1/2}^2} + 1 + \frac{\pi^2}{3}
     \end{align}
    
 \end{proof}
@@ -484,48 +518,64 @@ According to Lemma 1, we bound the probability of (\ref{lemma 3.1})(\ref{lemma 3
 According to Lemma \ref{Lemma 4: bound for E[T_i(n)]}, we derive the upper bound for expected regret,
 \begin{align}
     \mathbb{E}[R_n] \leq 
-          \sum_{i: m_i < m_\ast} \frac{(\sqrt{\beta} + 8 \sqrt{\log n})^2}{\log 2 \times \triangle_{i, 1/2}} + (1 + \frac{\pi^2}{3}) (\sum_{j=1}^K \triangle_{j, 1/2}) 
+          \sum_{i: m_i < m_\ast} \frac{(\sqrt{\beta} + 8 \sqrt{\log n})^2}{\sigma^2 \log 2 \times \triangle_{i, 1/2}} + (1 + \frac{\pi^2}{3}) (\sum_{j=1}^K \triangle_{j, 1/2}) 
 \end{align}
    
 \end{proof}
 %----------------------------------------------------------------------------------------
 \subsection{Exponential Distribution}
 
-\textbf{Proposed policy for exponential distribution (with assumption $Y_{(n/2 + 1)} \geq \gamma)$}\\
+\textbf{Proposed policy for exponential distribution}\\
 
 In the (t+1) round, pick an arm with index 
 \begin{align}
    \label{policy expon}
    \argmax_{i \in \mathcal{K}} \hat{m}_{i, T_i(t)} + \sqrt{2v_t \varepsilon} + 2 \varepsilon \sqrt{v_t/T_i(t)}
 \end{align}
-where $\hat{m}_{i, T_i(t)}$ is the empirical median for arm i at the round t, $\varepsilon = 4 \log t$, $v_t = \frac{4 \theta^2}{T_i(t) \gamma^2}$ with $0 < \gamma \leq 1$. $T_i(t)$ is the number of times arm i has been played until round t.  
+where $\hat{m}_{i, T_i(t)}$ is the empirical median for arm i at the round t, $\varepsilon = 4 \log t$, $v_t = \frac{4 \theta^2}{T_i(t) (\log 2)^2}$, where $\theta$ is the parameter of exponential distribution, $T_i(t)$ is the number of times arm i has been played until round t.  
 
 The policy includes two parts, where the first part is the empirical median of the rewards, the second part is the confidence bound and we denote it as,
 
 \begin{align}
 %\label{B_i(i, T_i(t)) definition}
 B_i(t, T_i(t)) &= \sqrt{2v_t \varepsilon} + 2 \varepsilon \sqrt{v_t/T_i(t)}\\
-&= \sqrt{2 \times \frac{4 \theta^2}{T_i(t) \gamma^2} \times 4 \log t} + 2 \times 4 \log t \times \sqrt{\frac{4 \theta^2}{T_i(t) \gamma^2} \times \frac{1}{T_i(t)}}\\
-&= \frac{4 \theta \sqrt{\log t} ( \sqrt{ 2T_i(t)} + 4\sqrt{\log t})}{T_i(t) \gamma}
+&= \sqrt{2 \times \frac{4 \theta^2}{T_i(t) (\log 2)^2} \times 4 \log t} + 2 \times 4 \log t \times \sqrt{\frac{4 \theta^2}{T_i(t) (\log 2)^2} \times \frac{1}{T_i(t)}}\\
+&= \frac{4 \theta \sqrt{\log t} ( \sqrt{ 2T_i(t)} + 4\sqrt{\log t})}{T_i(t) \log 2}
 \end{align}
 
 Thus, the policy in (\ref{policy expon}) can be written as,
 \begin{align}
-    \argmax_{i \in \mathcal{K}} \hat{m}_{i, T_i(t)} +  \frac{4 \theta \sqrt{\log t} ( \sqrt{ 2T_i(t)} + 4\sqrt{\log t})}{T_i(t) \gamma}
+    \argmax_{i \in \mathcal{K}} \hat{m}_{i, T_i(t)} +  \frac{4 \theta \sqrt{\log t} ( \sqrt{ 2T_i(t)} + 4\sqrt{\log t})}{T_i(t)\log 2}
 \end{align}
 
 \begin{theo}
-(Regret bound for policy of exponential distribution) (with assumption $Y_{(n/2 + 1)} \geq \gamma)$. \\
+(Regret bound for policy of exponential distribution). \\
 
 For all K $>$ 1, if the proposed policy is run on K machines with absolute reward distribution $v = (P_i: i \in \mathcal{K})$ having non-decreasing hazard rate, then its expected regret after any number of n plays is at most 
 
 \begin{align}
-    \sum_{i: m_i < m_\ast} \frac{32 \theta \log t (\sqrt{2 \theta + \triangle_{i, 1/2} \gamma^2} + \sqrt{\theta})^2}{ \triangle_{i, 1/2} \gamma^2} + (1 + \frac{\pi^2}{3}) (\sum_{j=1}^K \triangle_{j, 1/2}) 
+    \sum_{i: m_i < m_\ast} \frac{32 \theta \log t (\sqrt{2 \theta + \triangle_{i, 1/2} (\log 2)^2} + \sqrt{\theta})^2}{ \triangle_{i, 1/2} (\log 2)^2} + (1 + \frac{\pi^2}{3}) (\sum_{j=1}^K \triangle_{j, 1/2}) 
 \end{align}
 where $m_i$ is the median of $P_i$, $m_\ast$ is the median of the best arm (i.e. the arm with maximum median). $\triangle_{j, 1/2} = m_\ast - m_j$. $\theta > 0$ is the parameter of exponential distribution. 
 \end{theo}
 
-The bound isn't ideal, since when $\gamma$ approaches to 0, the bound approaches to $\infty$, which means we have to release the assumption of Y. 
+Some considerations:
+
+\begin{itemize}
+
+\item Is $Y_{(n/2 + 1)}$ a random variable or a scalar?\\
+$Y_{(n/2 + 1)}$ is the order statistic of samples of standard exponential distribution, so scalar. However, it is just a sample, which means $Y_{(n/2)}$ is only the median of the samples, but not the median of standard exponential distribution. 
+
+\item Can $Y_{(n/2 + 1)}$ be replaced by $Y_{(n/2)}$?\\
+Technically, no. On the one hand, $Y_{(n/2 + 1)} \leq Y_{(n/2 )}$, which means  $d_{n/2} \leq \frac{ 2\theta E_{n / 2} }{n Y_{(n/2+1)}} \geq  \frac{ 2\theta E_{n / 2} }{n Y_{(n/2)}} $. 
+On the other hand, $d_{n/2 - 1} \leq \frac{ 2\theta E_{n / 2 - 1} }{n Y_{(n/2)}} $, which eventually leads to the tail bound for $X_{(n/2 + 1)}$, not median anymore. 
+
+\item Can we still make assumption for $Y_{n/2 + 1}$?\\
+yes? we have $\lim_{n \rightarrow \infty} Y_{n/2} = \log 2$
+then $\lim_{n \rightarrow \infty} Y_{n/2 + 1} \simeq \log 2$. 
+So we can assume $Y_{n/2+1} = \log2$?
+However, the assumption may not be true when n is small, which means at the first few rounds of bandit algorithm, the assumption may not hold.
+\end{itemize}
 
 %----------------------------------------------------------------------------------------
 \subsection{Arbitrary Distribution}
@@ -655,7 +705,7 @@ According to Lemma 1, we bound the probability of (\ref{lemma 1.1})(\ref{lemma 1
         = &\mathbb{E}[\hat{Q}_{*, s}(\alpha)] - \mathbb{E}[\hat{Q}_{i, s_i}(\alpha)] - 2 ... \\
         \geq & \mu^\ast - \mu_i - \triangle_i = 0
     \end{align}
-    (\textcolor{red}{Cannot derive a value of l to satisfy that?})
+    %(\textcolor{red}{Cannot derive a value of l to satisfy that?})
 \end{proof}
    
 \end{proof}
